fix(replay): derive complete --add-opens at replay, not at capture
Move the JPMS --add-opens completion from capture time (lathe-junit
LaunchCapture) to replay time (lathe-core LaunchPlan), applied to both
forTest and forTestMain.

The capture-time approach only knew the packages present when a Surefire
fork ran; a test package added after capture (the write-test -> run-test
inner loop) is absent from the frozen test-launch.json, and its class then
fails at replay with IllegalAccessException because the module never opens
the new package to the JUnit runner's unnamed module. Since the server
materializes freshly-compiled test-classes on save, deriving --add-opens at
replay from each patched module's .lathe/<module>/test-classes covers both
the original partial-capture case (scoped runs, forkCount>1) and packages
added after capture, in one place.

LaunchCapture returns to storing Surefire's --add-opens verbatim.
LaunchPlan.completeAddOpens scans the patched test-classes for the test
module's packages (the sole source for that module) and unions captured
opens that target other modules (JDK/dependency opens the scan cannot see),
falling back to the captured set on an empty scan or I/O error.
FileUtil.packagesWithClasses is retained and reused. No schema change; the
main run is unaffected (module -m entry, no add-opens).

Validated against a real modular workspace: with a capture whose
--add-opens omits the signature package, a signature-package test replays
green (exitCode 0, no IllegalAccessException) because the open is derived at
replay.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>